# xlerobot-mcp

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
src/xlerobot_mcp/: __init__.py  camera.py  cli.py  controllers.py  server.py
tests/: test_camera.py  test_cli.py  test_hardware_controller_optional.py  test_mock_controller.py
