[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xlerobot-servo-mcp"
version = "0.1.0"
description = "MCP server that exposes XLeRobot servo controls to AI clients."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "mcp[cli]>=1.26.0,<2.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0,<9.0.0",
]
hardware = [
  "lerobot[feetech]",
  "torch>=2.2.1,<2.11.0",
  "torchvision>=0.21.0,<0.26.0",
]

[project.scripts]
xlerobot-servo-mcp = "xlerobot_mcp.cli:main"

[tool.uv.sources]
torch = [{ index = "pytorch-cpu", marker = "sys_platform == 'linux'" }]
torchvision = [{ index = "pytorch-cpu", marker = "sys_platform == 'linux'" }]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.hatch.build.targets.wheel]
packages = ["src/xlerobot_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
